--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
+  "editor.mouseWheelZoom": true,
   "editor.rulers": [ 80 ],
+  "files.encoding": "utf8",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
